--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Farouk's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #b0deff;">
   <table cellspacing="20">
     <tr>
       <td><img src="farouk agbaje1.jpg" alt="Farouk"></td>
@@ -15,7 +15,9 @@
       <p>Hi, my name is Farouk Agbaje and I am a <em>junior</em> at <strong>John Jay College.</strong>
         I am currently pursuing my Bachelor's degree in <a href="http://jjay.smartcatalogiq.com/en/2018-2019/Undergraduate-Bulletin/Majors/Computer-Science-and-Information-Security-Bachelor-of-Science">computer science</a>
         and I am on track to gradutate after the Fall 2020 semester.
-        I am an aspiring web developer and this is my first site.
+        I am an aspiring web developer and this is my first site. Also a future
+        goal of mine is to marry this Queen named <em>Shaniel Walker</em>... <strong>Maybe someday</strong>
+        when she stops being a jerk!
       </p></td>
     </tr>
   </table>
