--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Farouk's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: #b0deff;">
+<body>
   <table cellspacing="20">
     <tr>
-      <td><img src="farouk agbaje1.jpg" alt="Farouk"></td>
+      <td><img src="images\farouk agbaje1.jpg" alt="Farouk"></td>
       <td><h1>Farouk Agbaje</h1>
       <p><em>Student at</em> <strong><a href="http://www.jjay.cuny.edu/">John Jay College of Criminal Justice</a></strong></p>
       <p>Hi, my name is Farouk Agbaje and I am a <em>junior</em> at <strong>John Jay College.</strong>
@@ -72,6 +73,10 @@
   <tr>
     <td>HTML</td>
     <td>&#11088;&#11088;&#11088;&#11088;</td>
+  </tr>
+  <tr>
+    <td>CSS</td>
+    <td>&#11088;&#11088;</td>
   </tr>
 </table>
 <br>
