--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <p>Hi, my name is Farouk Agbaje and I am a <em>junior</em> at <strong>John Jay College.</strong>
           I am currently pursuing my Bachelor's degree in <a href="http://jjay.smartcatalogiq.com/en/2018-2019/Undergraduate-Bulletin/Majors/Computer-Science-and-Information-Security-Bachelor-of-Science">computer science</a>
           and I am on track to gradutate after the Fall 2020 semester.
-          I am an aspiring web developer and this is my first site. Also a future
-          goal of mine is to marry this Queen named <em>Shaniel Walker</em>... <strong>Maybe someday</strong>
-          when she gives me the opportunity. If she gives me the opportunity ❤️
+          I am an aspiring web developer and this is my first site.
         </p>
       </td>
     </tr>
@@ -78,7 +76,7 @@
     </tr>
     <tr>
       <td>CSS</td>
-      <td>&#11088;&#11088;</td>
+      <td>&#11088;&#11088;&#11088;</td>
     </tr>
   </table>
   <br>
