--- a/contact me.html
+++ b/contact me.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1><strong>Contact Information</strong></h1>
-    <p>The best way to contact me is by email and I will get back to you as soon
-    as I can. My email is below</p>
+    <p>If you would like to contact me, please you the form below and I will get back
+    to you as soon as possible.</p>
     <br>
     <hr>
     <form action="mailto:farouk.agbaje@yahoo.com" method="post" enctype="text/plain">
